nginx/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - name: pg-svc-port
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30090
