nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress
spec:
  rules:
  - host: nginx.devops.to
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
           service:
             name: nginx
             port:
               number: 80
